[package]
name = "rspc-vercel-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src-rust/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "time"] }
serde_json = { version = "1.0.86", features = ["raw_value"] }
rspc = { version = "0.1.3" , features = ["vercel"] }
vercel_runtime = { version = "0.2.1" }
async-stream = "0.3.4"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "rspc-0.1.3", default-features = false, features = ["mysql", "rspc"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "rspc-0.1.3", default-features = false, features = ["mysql", "rspc"] }
serde = "1.0.156"

[[bin]]
name = "rspc"
path = "api/rspc/[rspc].rs"

[[bin]]
name = "prisma"
path = "src-rust/bin/prisma.rs"
